Fix email alignment for large display

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -318,6 +318,18 @@ input:-webkit-autofill {
     margin-bottom: 0px;
   }
 
+  .flex .user-signup {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin: 30px 0px 20px 20px;
+  }
+
+  .flex .user-signup button {
+    align-items: flex-start;
+    margin: 10px 10px 10px 10px;
+  }
+
   .long-input {
     width: 400px;
   }
